# cbitset

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: mingw-ci.yml  mingw64-ci.yml  msys2.yml  ubuntu18.yml  ubuntu20.yml  vs16-arm-ci.yml  vs16-clang-ci.yml  vs16-ninja-ci.yml  vs17-arm-ci.yml  vs17-ci.yml  vs17-clang-ci.yml  vs17-ninja-ci.yml
benchmarks/: CMakeLists.txt  benchmark.c  lemirebenchmark.c
include/: CMakeLists.txt  bitset.h  portability.h
src/: CMakeLists.txt  bitset.c
tests/: CMakeLists.txt  unit.c
